添加支付宝微信二维码

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: MrLiZ
 subtitle: Better myself!
-description: Better myself!
+description: rage your dream
 author: MrLiZ
 language: zh-Hans
 timezone: Asia/Shanghai
