--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -626,5 +626,9 @@ css: css
 js: js
 images: images
 
+reward_comment: 坚持技术分享，您的支持将鼓励我继续创作！
+wechatpay: /images/wechat.png
+alipay: /images/alipay.png
+
 # Theme version
 version: 5.1.1
